# django-app

./: 1  1.pub  Dockerfile  demo.py  devices.csv  docker-compose.yaml  docker-compose1.yaml  pyproject.toml  quieries.sql  requirements.txt
mysite/: 1  1.pub  log.txt  log1.txt  log1.txt.3  shopapp-products-fixtures.json  shopapp_products-fixtures.xml
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py
mysite/myauth/templates/myauth/: about-me.html  base.html  login.html  register.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  views.py
mysite/requestdataapp/templates/requestdataapp/: base.html  file-upload.html  request-query-params.html  user-bio-form.html
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: products-fixtures.json
mysite/shopapp/management/commands/: agg.py  bulk_actions.py  create_order.py  create_products.py  selecting_fields.py  update_order.py
mysite/shopapp/migrations/: 0001_initial.py
mysite/shopapp/templates/shopapp/: base.html  create-product.html  groups-list.html  order_detail.html  (+8 more)
